--- a/content/style/ornate.sass
+++ b/content/style/ornate.sass
@@ -27,6 +27,16 @@ $d2: 40px
   margin: 20px
   z-index: -1
 
+$d3: 100px
+.deco3
+  display: inline-block
+  height: $d3
+  width: $d3
+  background-color: #ffe4b2
+  border-radius: 50%
+  margin: 20px
+  z-index: -1
+
 .decoL
   display: inline-block
   flex-grow: 1
