--- a/content/style/style.sass
+++ b/content/style/style.sass
@@ -20,6 +20,20 @@ $kp2: #9175a8
 
 $font-size: 14pt
 
+div.share-buttons
+  margin-top: 50px
+  text-align: center
+
+div.share-buttons > a
+  margin-left: 10px
+  margin-right: 10px
+  display: inline-block
+
+span.lead
+  font-size: 60pt
+  line-height: 60pt
+  float: left
+
 .signature a
   font-weight: bold
 
