--- a/content/style/about.sass
+++ b/content/style/about.sass
@@ -7,6 +7,7 @@
     display: flex
     align-items: center
     background-color: #eee
+    font-family: Mate SC
     padding: 5px
     cursor: pointer
     img
