--- a/content/style/blog.sass
+++ b/content/style/blog.sass
@@ -128,7 +128,18 @@ h1:before
 .title, h1, h2, h3, b
   color: black
 
+pre, pre.hljs
+  font-size: 12pt
+  background-color: #f5f5ff
+  padding: 5px
+  border-left: 5px solid #9175a8
 
+table
+  border: 2px solid black
+
+th, td
+  padding-top: 0px
+  padding-bottom: 0px
 
 
 
@@ -231,6 +242,15 @@ ul.articles
     margin: auto
 
 
+@media screen and (max-width: $width-body+300px)
+  .sidebyside
+    width: 100%
+    display: flex
+    flex-direction: column
+    > *
+      width: 100%
+
+
 @media screen and (max-width: $width-body+300px) and (min-device-aspect-ratio: 100/99)
   #logo img
     height: 50px
@@ -279,4 +299,5 @@ ul.articles
     font-size: 100pt
     line-height: 100pt
     margin-right: 20px
-
+  pre.hljs
+    font-size: 30px
