--- a/content/style/blog.sass
+++ b/content/style/blog.sass
@@ -39,7 +39,7 @@ span.lead
   float: left
 
 
-.seealso
+.seealso, .extra
   margin-top: 20px
   margin-left: 20px
   max-width: 350px
@@ -141,6 +141,8 @@ th, td
   padding-top: 0px
   padding-bottom: 0px
 
+li
+  padding-bottom: 10px
 
 
 /* INDEX
@@ -258,7 +260,7 @@ ul.articles
     background-color: #eee
   #nav
     padding: 10px
-    ul.toc, .seealso
+    ul.toc, .seealso, .extra
       display: none
   .title:before, h1:before, h2:before
     visibility: hidden
