minor stylistic adjustment for about page

--- a/content/style/blog.sass
+++ b/content/style/blog.sass
@@ -175,6 +175,9 @@ ul.articles
 
 /* ABOUT
 
+#main-container .project-title a
+  text-decoration: none
+
 .project
   margin-bottom: 20px
   .project-title:hover
